# mkv-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
async_blocking/: .gitignore  Cargo.toml
async_blocking/src/: lib.rs
mkv/: .gitignore  Cargo.toml  build.rs
mkv/examples/: dump.rs  dump_blocking.rs  remux.rs  remux_blocking.rs
mkv/src/: element.rs  errors.rs  io.rs  lib.rs
mkv_codegen/: .gitignore  Cargo.toml
mkv_codegen/src/: lib.rs
mkv_codegen/src/codegen/: ids.rs  mod.rs  reader.rs  structs.rs  writer.rs
mkv_codegen/src/parser/: ebml.rs  matroska.rs  mod.rs
